--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <header>Weather Dashboard</header>
     <div class="row" style="margin: auto">
         <aside class="col-md-4" id="sidebar">
-            <!---->
             <h2>Search for a City:</h2>
             <div class="row m-0"><input type="text" placeholder="Austin" id="userInfo"></div>
             <button type="button" class="btn btn-primary" id="submitBtn">Search</button>
@@ -43,7 +42,7 @@
             <div class="row h-100 rightSide" id="fiveDayWeather">
                 <h2>5-Day Forecast:</h2>
                 <!-- ------- Card One ------- -->
-                <div class="card text-white bg-dark  mb-3 myCard">
+                <div class="card text-white bg-dark  mb-3 myCard col-md-2">
                     <div class="card-header myCardHeader myCardDate">day 1</div>
                     <div class="card-body myCardBody">
                         <h5 class="card-title myCardText myCardPhoto"></h5>
@@ -53,7 +52,7 @@
                     </div>
                 </div>
                 <!-- ------- Card Two ------- -->
-                <div class="card text-white bg-dark mb-3 myCard">
+                <div class="card text-white bg-dark mb-3 myCard col-md-2">
                     <div class="card-header myCardHeader myCardDate">day 2</div>
                     <div class="card-body myCardBody">
                         <h5 class="card-title myCardText myCardPhoto"></h5>
@@ -63,7 +62,7 @@
                     </div>
                 </div>
                 <!-- ------- Card Three ------- -->
-                <div class="card text-white bg-dark mb-3 myCard">
+                <div class="card text-white bg-dark mb-3 myCard col-md-2">
                     <div class="card-header myCardHeader myCardDate">day 3</div>
                     <div class="card-body myCardBody">
                         <h5 class="card-title myCardText myCardPhoto"></h5>
@@ -73,7 +72,7 @@
                     </div>
                 </div>
                 <!-- ------- Card Four ------- -->
-                <div class="card text-white bg-dark mb-3 myCard">
+                <div class="card text-white bg-dark mb-3 myCard col-md-2">
                     <div class="card-header myCardHeader myCardDate">day 4</div>
                     <div class="card-body myCardBody">
                         <h5 class="card-title myCardText myCardPhoto"></h5>
@@ -83,7 +82,7 @@
                     </div>
                 </div>
                 <!-- ------- Card Five ------- -->
-                <div class="card text-white bg-dark mb-3 myCard">
+                <div class="card text-white bg-dark mb-3 myCard col-md-2">
                     <div class="card-header myCardHeader myCardDate">day 5</div>
                     <div class="card-body myCardBody">
                         <h5 class="card-title myCardText myCardPhoto"></h5>
